tests/kulezi_tests/bad/for_invalid_basetype.lat
int main() {
    boolean[] y = new boolean[2];
    for (int x : y) {
        return x;
    }

    return 0;
}